chore(vibetags): bump to 1.0.0-RC7, drop Copilot, split CLAUDE.md into topic docs
Bump vibetags 1.0.0-RC6 -> 1.0.0-RC7 and refresh both vendored vibetags-usage
skills from the RC7 source (five new annotations, AGENTS.md marker escape hatch).

RC7 newly activates Copilot generation, which wrote a 10.6 KB aggregate into
.github/copilot-instructions.md. Copilot is not used here, so its outputs are
removed rather than carried.

CLAUDE.md's hand-written prose is split into one file per topic under docs/,
leaving a topic index plus the invariants that are expensive to discover late.
Nothing is summarised away: each section moved verbatim.

Always-on agent context: 41,143 -> 32,594 bytes (-21%); CLAUDE.md alone
15,922 -> 6,679 (-58%). Builds green under JDK 26.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014HurA6tj8U3K5Z9ddW8aGH